testsuite/tests/contrib/lkt_semantic/invalid_grammar/test.lkt
import lexer_example

@invalid @with_lexer(foo_lexer) grammar bad_decl {
    val i: Int = 0

    @main_rule foo <- "foo"
}

@invalid @with_lexer(foo_lexer) grammar too_many_mains {
    @main_rule foo <- "foo"
    bar <- "bar"
    @main_rule foobar <- "foobar"
    @main_rule baz <- "baz"
}

@invalid @with_lexer(foo_lexer) grammar main_missing {
    bar <- "bar"
}

@invalid @with_lexer grammar invalid_with_lexer {
}

@invalid grammar with_lexer_missing {
}
